add full support for -XX:+PrintGCDateStamps in G1 algorithm